# wasmedge-rustsdk-examples

./: .gitignore  Cargo.toml  README.md  install_libwasmedge.sh  install_zh.sh
.github/workflows/: examples.yml  latest.yml  release.yml  test.yml
async-wasi/: Cargo.toml  README.md
async-wasi-socket-addr/: Cargo.toml  README.md
async-wasi-socket-addr/main-app/: Cargo.toml
async-wasi-socket-addr/main-app/src/: main.rs
async-wasi-socket-addr/socket-addr/: Cargo.toml
async-wasi-socket-addr/socket-addr/src/: main.rs
async-wasi-virtual-file/: Cargo.toml  README.md
async-wasi-virtual-file/run-wasm-app/: Cargo.toml
async-wasi-virtual-file/run-wasm-app/src/: main.rs
async-wasi-virtual-file/wasm-app/: Cargo.toml
async-wasi/run-wasm-app/: Cargo.toml
async-wasi/wasm-app/: Cargo.toml
call-func-from-host/: Cargo.toml  README.md
call-func-from-host/call-wasm-lib/: Cargo.toml
call-func-from-host/src/: main.rs
call-func-from-host/wasm-lib/: Cargo.toml
call-wasm-lib-from-host/: Cargo.toml  README.md
call-wasm-lib-from-host/call-wasm-lib/: Cargo.toml
call-wasm-lib-from-host/wasm-lib/: Cargo.toml
call-wasm-lib-with-external-deps/: Cargo.toml  README.md
call-wasm-lib-with-external-deps/host-app/: Cargo.toml
call-wasm-lib-with-external-deps/wasm-lib/: Cargo.toml
define-async-host-func/: Cargo.toml  README.md  expanded_main.rs
define-async-host-func-with-host-data/: Cargo.toml  README.md
define-async-host-func-with-host-data/src/: main.rs
define-async-host-func/src/: main.rs
define-host-func/: Cargo.toml  README.md
define-host-func-with-host-data/: Cargo.toml  README.md
define-host-func-with-host-data/src/: main.rs
define-host-func-with-string-args/: Cargo.toml  README.md
define-host-func-with-string-args/src/: main.rs
define-host-func/src/: main.rs
ggml-llama-via-wasinn/: Cargo.toml  README.md
ggml-llama-via-wasinn/ggml-llama-wasm/: Cargo.toml
ggml-llama-via-wasinn/run-ggml-llama-inference/: Cargo.toml
load-module-in-module/: Cargo.toml  README.md
load-module-in-module/alice-wasm-lib/: Cargo.toml
load-module-in-module/bob-wasm-lib/: Cargo.toml
load-module-in-module/host-app/: Cargo.toml
manipulate-linear-memory/: Cargo.toml  README.md
manipulate-linear-memory/src/: main.rs
multi-threaded-parallel/: Cargo.toml  README.md  visualize_result.ipynb
multi-threaded-parallel/mandelbrot-c/: mandelbrot.c  mandelbrot.wasm
multi-threaded-parallel/run-mandelbrot-in-parallel/: Cargo.toml
multi-threaded-parallel/run-mandelbrot-in-parallel/src/: main.rs
object-detection-via-wasinn/: Cargo.toml  README.md
object-detection-via-wasinn/src/: main.rs
run-wasm-app-from-host/: Cargo.toml  README.md  tutorial.md
run-wasm-app-from-host/run-wasm-app/: Cargo.toml
run-wasm-app-from-host/wasm-app/: Cargo.toml
run-wasm-func-in-aot-mode/: Cargo.toml  README.md
run-wasm-func-in-aot-mode/src/: main.rs
say_hello/: Cargo.toml  README.md
say_hello/src/: main.rs
set-env-vars-via-wasi/: Cargo.toml  README.md
set-env-vars-via-wasi/print-env-vars/: Cargo.toml
set-env-vars-via-wasi/set-env-vars-via-wasi/: Cargo.toml
simple-plugin/: Cargo.toml  README.md
simple-plugin-ext/: Cargo.toml  README.md
simple-plugin-ext/naive-math-plugin/: Cargo.toml
simple-plugin-ext/naive-math-wasm/: Cargo.toml
simple-plugin-ext/run-with-plugin/: Cargo.toml
simple-plugin/naive-math-plugin/: Cargo.toml
simple-plugin/naive-math-wasm/: Cargo.toml
simple-plugin/run-with-plugin/: Cargo.toml
table-and-funcref/: Cargo.toml  README.md
table-and-funcref/src/: main.rs
timeout-async-func-execution/: Cargo.toml  README.md
timeout-async-func-execution/src/: main.rs
wasmedge-bindgen/: README.md
wasmedge-bindgen/call-wasm-lib/: Cargo.toml
wasmedge-bindgen/wasm-lib/: Cargo.toml
wasmedge-bindgen/wasm-lib/src/: lib.rs
(+23 files in other folders)
