[workspace]
resolver = "2"
members = [
    "async-wasi/run-wasm-app",
    "async-wasi/wasm-app",
    "async-wasi-socket-addr/main-app",
    "async-wasi-socket-addr/socket-addr",
    "call-wasm-lib-from-host/call-wasm-lib",
    "call-wasm-lib-from-host/wasm-lib",
]


[workspace.dependencies]
wasmedge-sdk = { version = "0.14.0", features = ["async"] }
tokio = { version = "1", features = ["full"] }
