[workspace]
resolver = "2"
members = [
    "say_hello",
    "async-wasi/run-wasm-app",
    "async-wasi/wasm-app",
    "async-wasi-socket-addr/main-app",
    "async-wasi-socket-addr/socket-addr",
    "call-wasm-lib-from-host/call-wasm-lib",
    "call-wasm-lib-from-host/wasm-lib",
    "call-wasm-lib-with-external-deps/host-app",
    "call-wasm-lib-with-external-deps/wasm-lib",
    "define-async-host-func",
    "define-async-host-func-with-host-data",
    "define-host-func",
    "define-host-func-with-host-data",
    "run-wasm-app-from-host/run-wasm-app",
    "run-wasm-app-from-host/wasm-app",
    "run-wasm-func-in-aot-mode",
    "load-module-in-module/alice-wasm-lib",
    "load-module-in-module/bob-wasm-lib",
    "load-module-in-module/host-app",
]


[workspace.dependencies]
wasmedge-sdk = { version = "0.14.0", features = ["async"] }
tokio = { version = "1", features = ["full"] }
