[package]
edition = "2021"
name = "define-async-host-func"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.0", features = ["full"]}
wasmedge-sdk = {git = "https://github.com/apepkuss/WasmEdge", branch = "master", features = ["async"]}
