[package]
name = "manipulate-linear-memory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmedge-sdk = { version = "0.8.0", path = "/Volumes/Dev/secondstate/me/WasmEdge/bindings/rust/wasmedge-sdk" }
anyhow = "1"