[package]
edition = "2021"
name = "run-mandelbrot-in-parallel"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmedge-sdk = { path = "/home/sam/workspace/downloads/WasmEdge/bindings/rust/wasmedge-sdk", features = [
    "aot",
] }
