[package]
edition = "2021"
name = "wasm-lib"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
num-integer = "0.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha3 = "0.10.6"
wasmedge-bindgen = {path = "/Volumes/Dev/secondstate/me/wasmedge-bindgen/bindgen/rust/wasm"}
wasmedge-bindgen-macro = {path = "/Volumes/Dev/secondstate/me/wasmedge-bindgen/bindgen/rust/macro"}
